blueprints/aws-eks-multicluster/k8s-apps/backend/gatus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gatus
  labels:
    app: backend
    cluster: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
        cluster: backend
    spec:
      serviceAccountName: backend
      terminationGracePeriodSeconds: 5
      containers:
        - image: twinproduction/gatus:v5.14.0
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 100M
            requests:
              cpu: 50m
              memory: 30M
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /config
              name: backend-config
      volumes:
        - configMap:
            name: backend
          name: backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gatus
  labels:
    app: backend
    service: backend
  annotations:
    # ExternalDNS will create DNS record: backend.aws.aviatrixdemo.local
    external-dns.alpha.kubernetes.io/hostname: backend.aws.aviatrixdemo.local
    # Use IP target type for NLB to work correctly with Aviatrix SNAT
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: gatus
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    # ExternalDNS will create DNS record: backend-web.aws.aviatrixdemo.local
    external-dns.alpha.kubernetes.io/hostname: backend-web.aws.aviatrixdemo.local
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
